--- a/compose.yml
+++ b/compose.yml
@@ -1,19 +1,41 @@
-version: '3.1'
+version: '3.8'
 
 services:
+  # PostgreSQL service
   db:
-    image: postgres
-    restart: always
+    image: postgres:16-alpine
+    restart: unless-stopped
     environment:
-      # This value only for example only
-      POSTGRES_DB: reversal
-      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: ${POSTGRES_DB:-reversal}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-secret}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
+  # Application service
   app:
-    image: reversal
-    restart: always
+    build: .
+    image: reversal:latest
+    restart: unless-stopped
     ports:
-      - 5000:5000
+      - "${PORT:-5000}:5000"
     environment:
-      # This value only for example only
-      DATABASE_URL: "postgresql://postgres:secret@db/reversal"
+      # Database configuration
+      DB_TYPE: ${DB_TYPE:-postgresql}  # Change to 'sqlite' to use SQLite
+      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:secret@db/reversal}
+      SECRET_KEY: ${SECRET_KEY:-dev-secret-key}
+      FLASK_ENV: ${FLASK_ENV:-production}
+    volumes:
+      - sqlite_data:/app/data  # For SQLite database
+    depends_on:
+      db:
+        condition: service_healthy
+
+volumes:
+  postgres_data:  # Persistent volume for PostgreSQL data
+  sqlite_data:    # Persistent volume for SQLite data
